--- a/index.html
+++ b/index.html
@@ -429,8 +429,8 @@
          placeholder="Введіть текст"></textarea>
 
 <div class="checkbox">
-  <input class="hidden" type="checkbox" name="terms-checkbox">
-<label class="point" for="">Погоджуюся з розсилкою та приймаю <a href="#">Умови договору</a></label>
+  <input class="hidden" type="checkbox" name="terms-checkbox" checked>
+<label class="point" for="terms-checkbox">Погоджуюся з розсилкою та приймаю <a class="accent" href="#">Умови договору</a></label>
 </div>
 <button class="form-submit btn" type="submit">Відправити</button>
 
