--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
          placeholder="Введіть текст"></textarea>
 
 <div class="checkbox">
-  <input class="hidden" type="checkbox" name="terms-checkbox" checked>
+  <input class="hidden" type="checkbox" name="terms-checkbox" id="terms-checkbox" checked>
 <label class="point" for="terms-checkbox">Погоджуюся з розсилкою та приймаю <a class="accent" href="#">Умови договору</a></label>
 </div>
 <button class="form-submit btn" type="submit">Відправити</button>
