--- a/index.html
+++ b/index.html
@@ -430,7 +430,10 @@
 
 <div class="checkbox">
   <input class="hidden" type="checkbox" name="terms-checkbox" id="terms-checkbox" checked>
-<label class="point" for="terms-checkbox">Погоджуюся з розсилкою та приймаю <a class="accent" href="#">Умови договору</a></label>
+<label class="point checkbox-content" for="terms-checkbox">
+  <svg class="checkbox-icon">
+    <use href="/images/sprite.svg#vector">
+  </use></svg>Погоджуюся з розсилкою та приймаю <a class="accent" href="#">Умови договору</a></label>
 </div>
 <button class="form-submit btn" type="submit">Відправити</button>
 
