--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
          placeholder="Введіть текст"></textarea>
 
 <div class="checkbox">
-  <input class="hidden" type="checkbox" name="terms-checkbox" id="terms-checkbox" checked>
+  <input class="hidden checkbox-content" type="checkbox" name="terms-checkbox" id="terms-checkbox" checked>
 <label class="point checkbox-content" for="terms-checkbox">
   <svg class="checkbox-icon">
     <use href="/images/sprite.svg#vector">
