--- a/index.html
+++ b/index.html
@@ -429,8 +429,8 @@
          placeholder="Введіть текст"></textarea>
 
 <div class="checkbox">
-  <input class="hidden checkbox-content" type="checkbox" name="terms-checkbox" id="terms-checkbox" checked>
-<label class="point checkbox-content" for="terms-checkbox">
+  <input class="hidden" type="checkbox" name="terms-checkbox" id="terms-checkbox">
+<label class="point checkbox-icon" for="terms-checkbox">
   <svg class="checkbox-icon">
     <use href="/images/sprite.svg#vector">
   </use></svg>Погоджуюся з розсилкою та приймаю <a class="accent" href="#">Умови договору</a></label>
