--- a/index.html
+++ b/index.html
@@ -428,15 +428,13 @@
          id="user-comment" 
          placeholder="Введіть текст"></textarea>
 
-<div class="checkbox">
-  <input class="hidden" type="checkbox" name="terms-checkbox" id="terms-checkbox">
-<label class="point checkbox-icon" for="terms-checkbox">
-  <svg class="checkbox-icon">
+         <label class="point policy-text" for="terms-checkbox">
+          <input class="hidden" type="checkbox" name="terms-checkbox" id="terms-checkbox">
+  <svg class="checkbox-icon" width="11" height="8">
     <use href="/images/sprite.svg#vector">
-  </use></svg>Погоджуюся з розсилкою та приймаю <a class="accent" href="#">Умови договору</a></label>
-</div>
+  </use></svg>Погоджуюся з розсилкою та приймаю <a class="accent" href="#"> Умови договору</a> 
+</label>
 <button class="form-submit btn" type="submit">Відправити</button>
-
        </form>
       </div>
     </div>
