--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
          <label class="point policy-text" for="terms-checkbox">
           <input class="hidden" type="checkbox" name="terms-checkbox" id="terms-checkbox">
   <svg class="checkbox-icon" width="11" height="8">
-    <use href="/images/sprite.svg#vector">
+    <use href="./images/sprite.svg#vector">
   </use></svg>Погоджуюся з розсилкою та приймаю <a class="accent" href="#"> Умови договору</a> 
 </label>
 <button class="form-submit btn" type="submit">Відправити</button>
